`chore: Update .gitignore and requirements.txt, add CloneDetector class, and improve form layout`

--- a/templates/main.html
+++ b/templates/main.html
@@ -532,23 +532,24 @@
           style="
             text-align: center;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
           "
         >
-          <div style="width: 45%">
+          <div style="width: 100%">
             <h3>Code Graph 1</h3>
             <img
               src="data:image/png;base64,{{ graph_url1 }}"
               alt="Code Graph 1"
-              style="width: 100%; max-width: 400px"
+              style="width: 100%; max-width: 100%"
             />
           </div>
-          <div style="width: 45%">
+          <div style="width: 100%">
             <h3>Code Graph 2</h3>
             <img
               src="data:image/png;base64,{{ graph_url2 }}"
               alt="Code Graph 2"
-              style="width: 100%; max-width: 400px"
+              style="width: 100%; max-width: 100%"
             />
           </div>
         </div>
